[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
brownstone = "3.0.0"
clap = { version = "4.4.10", features = ["derive", "unicode", "string", "wrap_help"] }
itertools = "0.12.0"
joinery = "3.1.0"
lazy_format = "2.0.3"
nom = "7.1.3"
nom-supreme = "0.8.0"
regex = "1.10.2"
thiserror = "1.0.50"

[build-dependencies]
joinery = "3.1.0"
lazy_format = "2.0.3"
nom = "7.1.3"
nom-supreme = "0.8.0"
